<resources>
    <string name="app_name">فروشگاه تست</string>
    <string name="sbnavitem_home">خانه</string>
    <string name="sbnavitem_cart">سبد خرید</string>
    <string name="sbnavitem_daste">دسته بندی ها</string>
    <string name="sbnavitem_profile">پروفایل</string>
    <string name="stxt_wonderfuls">پیشنهاد شگفت انگیز</string>
    <string name="stxt_searchbox">جستجو در </string>
    <string name="stxt_sort">مرتب سازی</string>
    <string name="stxt_filter">فیلتر ها</string>
    <string name="stxt_mostViews">پربازدید ترین ها</string>
    <string name="stxt_mostSell">پرفروش ترین ها</string>
    <string name="stxt_lowestPrice">ارزان ترین ها</string>
    <string name="stxt_highestPrice">گران ترین ها</string>
    <string name="stxt_newProduct">جدیدترین ها</string>
    <string name="setxt_searchbox">جستجو در همه کالا</string>
    <string name="stxt_AddCommentActivity_comment">نظر خود را شرح دهید</string>
    <string name="stxt_itemComments_suggested">خرید این محصول را پیشنهاد می کنم</string>
    <string name="stxt_itemComments_unsuggested">خرید این محصول را پیشنهاد نمی کنم</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_name_enter">ورود</string>
    <string name="sbtn_addComment_sendComment">ثبت نظر</string>
    <string name="etxt_password_hint">رمز عبور</string>
    <string name="stxt_enter_forgetpass">آیا رمز عبور خود را فراموش کردید؟</string>
    <string name="stxt_addComment_desc">متن نظر</string>
    <string name="stxt_addComment_r1">خرید این محصول را به دیگران...</string>
    <string name="sbtn_addComment_suggested">پیشنهاد می کنم</string>
    <string name="sbtn_addComment_unsuggested">پیشنهاد نمی کنم</string>
    <string name="etxt_title_hint">عنوان نظر</string>
    <string name="btn_sumbit_name">ثبت اطلاعات</string>
    <string name="stxt_regesterac_laws">با قوانین این اپلیکیشن موافقم</string>
    <string name="etxt_name_hint">نام و نام خانوادگی</string>
    <string name="btn_name_regester">ثبت نام</string>
    <string name="dio_wating">لطفا کمی صبر کنید...</string>
    <string name="btn_name_exitfromaccount" />
    <string name="stxt_profile_check">برای استفاده از این بخش ابتدا با وارد حساب کاربری شوید!</string>
    <string name="sbtn_DeatalActivity_properties">مشخصات</string>
    <string name="sbtn_DeatalActivity_otherseller">دیگر فروشندگان</string>
    <string name="sbtn_DeatalActivity_comments">نظرات کاربران</string>
    <string name="stxt_chatfragment_problemconnecttoserver">مشکل ارتباط با سرور!</string>
    <string name="stxt_Splash_tryagain">تلاش دوباره</string>
    <string name="btn_name_prrivateinfo">اطلاعات حساب کاربری</string>
    <string name="btn_name_favor">محصولات مورد علاقه</string>
    <string name="btn_name_order">سفارشات</string>
    <string name="btn_name_setPoint">امتیاز دهی به برنامه</string>
    <string name="btn_name_exit">خروج از حساب کاربری</string>
    <string name="btn_name_shareus" />
    <string name="btn_name_aboutus" />
    <string name="sbtn_CommentActivity_comments">نظرات کاربران</string>
    <string name="etxt_phone_hint">شماره تلفن</string>
    <string name="sbtn_suggested_tag">10001</string>
    <string name="sbtn_showProduct">مشاهده کالاها</string>
    <string name="sbtn_unsuggested_tag">10005</string>
    <string name="stxt_login">ورود(ثبت نام)</string>
    <string name="stxt_infosPFragment_infoprivate">اطلاعات شخصی</string>
    <string name="etxt_address">آدرس</string>
    <string name="etxt_codePosti_hint">کد پستی</string>
    <string name="sdl_dialog_favor">آیا برای حذف این محصول از لیست علاقه مندی ها مطمئن هستید؟</string>
    <string name="sdl_dialog_basket">آیا برای حذف این محصول از سبد خرید مطمئن هستید؟</string>
    <string name="sdl_dialog_logout">آیا برای خروج از حساب کاربری مطمئن هستید؟</string>
    <string name="sbtn_yes">بله</string>
    <string name="sbtn_no">خیر</string>
    <string name="btn_name_delete">حذف</string>
    <string name="txt_addToCart">محصول قبلا به سبد اضافه شده است</string>
    <string name="btn_keepOnBuy">ادامه خرید</string>
    <string name="stxt_BasketActivity_empty">سبد خرید شما خالی است!</string>


</resources>